--- a/public/css/applicant/landingpage/landingpage.css
+++ b/public/css/applicant/landingpage/landingpage.css
@@ -144,6 +144,36 @@ body {
   overflow: auto;
 }
 
+   .select-btn {
+      background: #0a2d82;
+      color: white;
+      padding: 10px 20px;
+      border: none;
+      border-radius: 6px;
+      font-size: 14px;
+      font-weight: 600;
+      cursor: pointer;
+      transition: 0.3s;
+    }
+
+    .select-btn:hover {
+      background: #071f5a;
+    }
+
+    /* Close Button */
+    .close-btn {
+      margin-top: 25px;
+      background: transparent;
+      border: none;
+      color: #666;
+      font-size: 14px;
+      cursor: pointer;
+    }
+
+    .close-btn:hover {
+      text-decoration: underline;
+    }
+
 /* First background */
 .section1::before {
     background-image: linear-gradient(
@@ -337,10 +367,11 @@ nav {
     align-items: start;
 }
 
-.content img {
+.content img:not(#workeroremployer) {
     margin-left: 150px;
     margin-top: 100px;
 }
+
 .content h1 {
     margin-top: 200px;
     font-size: 50px;
