as of now, the ui for the log in page of applicants is now done and only minor revisions needs to be executed in the future

--- a/public/css/applicant/landingpage/landingpage.css
+++ b/public/css/applicant/landingpage/landingpage.css
@@ -202,7 +202,7 @@ body {
             rgba(255, 255, 255, 0.6),
             rgba(255, 255, 255, 0.6)
         ),
-        url("https://scontent.fdvo1-1.fna.fbcdn.net/v/t39.30808-6/299883758_393078806314979_38915898108932791_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=cc71e4&_nc_eui2=AeGt5VGvlqs-U1xG-oTckF8MQ3aPtscJFi9Ddo-2xwkWL0U3EL83EPodODV6zSC9aeFnxqrv80hrah6GpnWjsV4p&_nc_ohc=3oVahzVNZuEQ7kNvwFcppQt&_nc_oc=Adl_ANNcFUT5hpTa0liveBTJuhl09RfhBlInGH7e6VTCFr-PpMCfRVjT8YtajZdjR6w&_nc_zt=23&_nc_ht=scontent.fdvo1-1.fna&_nc_gid=38I-FPDZwb3HN1vR3vWn6A&oh=00_AfM44x7a_OS-NecBD-AV1apV2dBpRUw6bFP8bpAyVO8kdw&oe=68472D37");
+        url("https://recruit-nz.co.nz/wp-content/uploads/2023/02/hire-filipino-workers.jpg");
     animation-name: fade3;
     animation-delay: 1s;
 }
